updated backend exp

--- a/index.html
+++ b/index.html
@@ -11,16 +11,43 @@
   <div class="two-columns">
     <div class="column">
       <section>
-        <h2>Summary</h2>
-        <p>I am 4th year<b>(8th sem/final semester)</b> Computer Science BTech undergrad.
-          I have a good knowledge of algorithms, data structures and problem solving.
-           Along with this i have worked on projects related to Backend Development and Machine Learning.
-           I am looking for full time fresher positions in Software Development and related roles. </p>
+        <h2>About</h2>
+        Software Developer working at Betterhalf.Ai a startup founded by MIT alumnis.
+        Experience in writing quality code, with high
+        proficiency in problem solving and software system design. 1+yr of total work experience.
       </section>
       <section>
-	<h2>Internship(9 months)</h2>
+        <h2>Job Experience</h2>
+        <h5>Company: Betterhalf.AI</h5>
+        <h5>Period: September-2020 to Present</h5>
+        <div class="timeline">
+          <div class="timeline-item">
+            <h3>Backend Developer</h3>
+              <ul>
+                <em>
+                <li>Design and develop features in form of <b>REST APIs</b>. Using
+                  <b>Django, Django Rest Framework</b> and <b>Flask for multiple
+                  microservices</b>.</li>
+                <li>Use knowledge of <b>Design Patterns</b>, <b>Object Oriented
+                  Programming</b> and a good <b>CI/CD pipeline</b> for high quality
+                  <b>maintainable code</b>.</li>
+                <li>Optimise the <b>architecture</b> and <b>database</b> with <b>low latency,
+                  high scalability and high availability</b> in mind.</li>
+                <li>Follow <b>test driven development</b> for durability for code.</li>
+                <li>Worked on features like, <b>payments</b>, <b>OTP authentication</b>,
+                  image verification with third party APIs, implemented detailed
+                   user match algorithm for marriage portal, integration of Machine Learning models as
+                  microservices.</li>
+                <li><b>Result:</b> Timely development of multiple features to meet product goals.</li>
+              <ul>
+          </div>
+        </div>
+
+      </section>
+      <section>
+	<h2>Internship and Trainee Experience</h2>
   <h5>Company: Betterhalf.AI</h5>
-  <h5>Period: July-19 to November-19, January-20 to present</h5>
+  <h5>Period: July-19 to November-19, January-20 to August-20</h5>
 	<div class="timeline">
           <!-- <span class="line"></span> -->
           <div class="timeline-item">
@@ -34,20 +61,21 @@
             </li>
             <li>
               Completed the development of <b>flask</b> based apis using best practices like <b>PEP8</b>,
-               <b>pylint</b> in <b>Pycharm</b>. </li>
-            <li>Used <b>ORM sqlalchemy</b> and <b>Marshmallow as serializer</b>.
+               <b>pylint</b> in <b>Pycharm</b>. Learned how code maintenance becomes faster using best practices </li>
+            <li>Used ORM <b>sqlalchemy</b> with <b>PostgreSQL</b> on <b>Amazon RDS</b> and <b>Marshmallow</b> as <b>serializer</b>.
             </li>
             <li>These API's are to run ML Models on small amount of user data like age
                and name and use it to get religion, mother_tongue and most likely partner preferences of the user.
             </li>
-            <li> Learned about <b>scalable deployment architecture</b> and load distribution among processing nodes.
-               Learned <b>Redis</b> for key value in-memory storage and <b>Celery</b> for job scheduling.
+            <li> Learned about <b>scalable deployment architecture</b>, load distribution among processing nodes and creating high performance server based applications.
+               Learned <b>Redis</b> for key value in-memory storage and <b>Celery</b> for job queueing.
             </li>
+            <li> Learned about API security and authentication using OAuth2 access tokens.</li>
             <li>Used postman for saving and documenting the API and learned <b>PyTest</b> to write tests for them.
               Also learned how these thing can prevent issues in long run.
              </li>
-             <li>Models developed were in <b>Tensorflow</b> and <b>SciKitLearn</b> for the above APIs.
-               <b>LSTM based RNN</b>, <b>Random Forest</b>, <b>K Nearest Neighbors</b> were some of the models used.
+             <li>Models developed were in Tensorflow and SciKitLearn for the above APIs.
+               LSTM based RNN, Random Forest, K Nearest Neighbors were some of the models used.
              </li>
              <li><b>Result : </b>Reduced onboarding to few clicks. User retention was increased.</li>
              <br>
@@ -56,15 +84,6 @@
              <h4></h4>
 
             </ul>
-          </div>
-          <div class="timeline-item">
-            <h3>Image Validation</h3>
-            <em>
-           <ul><li>It was important to validate user images for inappropriate content and mismatch in gender.</li>
-           <li>I worked on image based ML Models for purposes like NSFW detection, Human face detection,
-             Gender detection. Learned about <b>Inception</b> and <b>Vgg</b> Models.
-           </li></ul>
-           </em>
           </div>
         </div>
 	<h2>Other Personal Projects</h2>
@@ -75,7 +94,7 @@
             <h4>Criminal Database Visualizer</h4>
             <p><em>DBMS project with <b>d3.js</b> on frontend <b>DJANGO</b> on backend
               focusing on ease of use, clean design and <b>normalization</b> of database.
-              Learned a lot about backend development through tutorials before this project,
+              Learned a lot about backend development through tutorials before this project, also i have learned about django during internship. For example,
               <b>about views, API, url routing, about templates and templating language Jinja2,
                 about Models ORM, Querysets and Serialization Deserialization, Middlewares, Mixins, Django Rest Framework, Viewsets etc.</b></em></p>
             <ul>
@@ -99,10 +118,10 @@
         <div class="timeline">
           <span class="line"></span>
           <div class="timeline-item">
-            <h4>Interest-Net</h4>
-            <p><em>Offline improvement to below project, using <b>Tensorflow and Keras</b>. Using <b>custom top layer neural-net</b> model on top of <b>vgg16</b>. Eliminates the dependency on Azure api.</em></p>
+            <h4>Motorcycle helmet detection with YOLO+LBPH+SVM</h4>
+            <p><em>Ongoing final year project for detection of motorcycle using YOLO model and classification of unhelmeted/helmet with LBPH and SVM.</em></p>
             <ul>
-              <li><a href="https://github.com/Vibhor199/neuralnet">https://github.com/Vibhor199/neuralnet</a></li>
+              <li><a href="https://github.com/Vibhor199/motorcyle_helmet_detection">https://github.com/Vibhor199/motorcyle_helmet_detection</a></li>
             </ul>
           </div>
         </div>
@@ -118,34 +137,8 @@
           </div>
         </div>
 
-
       </section>
 
-      <section>
-        <h2>Education</h2>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            <h3>Bachelor of Engineering <small style="color: #555">Pursuing</small> </h3>
-            <p><em>Sir M Visvesvaraya Institute of Technology, Bangalore, Karnataka</em></p>
-            <ul>
-              <li>CGPA 1st to 7th sem 7.2/10</li>
-              <li>Expected Graduation: July/August 2020</li>
-            </ul>
-          </div>
-        </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            <h3>Schooling</h3>
-            <p><em>Dr. V.S.E.C Kidwai Nagar</em></p>
-            <ul>
-              <li>10th: 89.5%  12th: 89%</li>
-              <li>Passing Year: 2015</li>
-            </ul>
-          </div>
-        </div>
-      </section>
 
     </div>
 
@@ -162,45 +155,46 @@
           </div>
           <div class="timeline-item">
             <h4>LinkedIn:</h4>
-            <a href="https://www.linkedin.com/in/vibhor-s-40a458146">https://www.linkedin.com/in/vibhor-s-40a458146</a>
+            <a href="https://www.linkedin.com/in/vibhor-sh/">https://www.linkedin.com/in/vibhor-sh/</a>
           </div>
           <div class="timeline-item">
             <h4>Github:</h4>
             <a href="https://github.com/Vibhor199/">https://github.com/Vibhor199/</a>
           </div>
+          <div class="timeline-item">
+            <h4>StackOverflow:</h4>
+            <a href="https://stackoverflow.com/users/12116462/vibhor">https://stackoverflow.com/users/12116462/vibhor</a>
+          </div>
         </div>
 
       </section>
+
       <section>
         <h2>Skills</h2>
         <ul>
         <strong>Core</strong>
-        <li>Databases(relational-SQL and object based)</li>
+        <li>Problem Solving and Competitive Coding</li>
+        <li>Databases(relational-SQL and NoSQL)</li>
     	  <li>Algorithms</li>
     	  <li>Networks</li>
-        <li>Cloud Architecture</li>
-        <li>Software design and Architecture</li>
+        <li>System Design</li>
+        <li>Design Patterns</li>
+        <li>Software Architecture</li>
         <li>Object Oriented Programming</li>
         <li>Operating Systems</li>
-        <li>Machine Learning Algorithms (Logistic Regression, SVM, Decision Trees, Linear Regression, KNN, DB-Scan, K-Means)</li>
-        <li>Deep Neural Networks, GAN, RNN, CNN fundamentals, Convolution, Pooling, Activation Function, Regularization</li>
-        <li>Object Detection FastRCNN, MaskRCNN, YOLO etc</li>
+        <li>Machine Learning Algorithms</li>
         <br>
         <strong>Hands-on experience with</strong>
         <li>Git, Pycharm, Postman, CI/CD, Flake8, Pylint, Pytest</li>
-        <li>Flask, DJANGO, PHP, Node.js</li>
+        <li>Web Frameworks like Flask, DJANGO, PHP(laravel), Node.js</li>
         <li>SQL Alchemy, Marshmallow, Flask Rest Plus</li>
-        <li>Amazon AWS(Python sdk boto3) and Azure</li>
+        <li>Amazon AWS(Python sdk boto3) EC2, S3, Lambdas, Cloufront, Rekognition and Azure</li>
+        <li>Redis, Celery, Sentry, Docker, Kubernetes, Nginx, Gunicorn</li>
         <li>Tensorflow and Keras in python</li>
         <li>ComputerVision(OpenCV, PILLOW)</li>
         <li>Data Science</li>
         <li>Web Scraping using Selenium, bs4, Scarpy</li>
-        <li>Android App Development</li>
         <br>
-          <strong>Libraries</strong>
-          <li>Python: Scikit-Learn,Pandas, OpenCV, Pillow, Numpy, MatplotLib, Seaborn, Tensorflow and Keras(on top of Tensorflow),Selenium, Python Requests, Beautiful Soup</li>
-          <li>Front End JavaScript:Bootstrap, D3.JS, React.js, Phazor, Jquery and Ajax</li>
-          <br>
           <strong>Languages Used</strong>
           <li>Python, Java, JavaScript, C++(In order of expertise)</li>
         </ul>
@@ -214,6 +208,20 @@
         </ul>
       </section>
       <section>
+        <h2>Education</h2>
+        <div class="timeline">
+          <span class="line"></span>
+          <div class="timeline-item">
+            <h3>Bachelor of Engineering in Computer Science</h3>
+            <p><em>Sir M Visvesvaraya Institute of Technology, Bangalore, Karnataka</em></p>
+            <ul>
+              <li>CGPA 7.3/10</li>
+              <li>Graduated: August 2020</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- <section>
         <h2>Other Work Samples</h2>
         <div class="timeline">
           <span class="line"></span>
@@ -229,22 +237,7 @@
             <a href="https://github.com/Vibhor199/recyclerview">https://github.com/Vibhor199/recyclerview</a>
           </div>
         </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            Tank War JavaScript Game(Phazor library)
-            <a href="https://vibhor199.github.io/Tank2DGameInPhaser/">https://vibhor199.github.io/Tank2DGameInPhaser/</a>
-          </div>
-        </div>
-        <div class="timeline">
-          <span class="line"></span>
-          <div class="timeline-item">
-            OPEN-GL graphics project (Freeglut3)
-            <a href="https://github.com/Vibhor199/CGProject">https://github.com/Vibhor199/CGProject</a>
-          </div>
-        </div>
-
-      </section>
+      </section> -->
     </div>
   </div>
 </div>
